# chess

./: CMakeLists.txt  README.md  commit.sh  execute.sh  main.cpp
inc/: board.hpp  commons.hpp  game.hpp  interface.hpp  piece.hpp  player.hpp  position.hpp
src/: board.cpp  commons.cpp  game.cpp  piece.cpp  player.cpp  position.cpp
